<resources>
    <string name="app_name">Pulse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_app">Exit App</string>
    <string name="exit_desc">Are you sure to want exit from the app?</string>
    <string name="logout">Logout</string>
    <string name="logout_desc">Are you sure to want logout from the app?</string>
    <string name="yeah">Yeah! sure</string>
    <string name="not_now">Not Now</string>
    <string name="default_notification_channel_id"/>

    <string name="add_candidate">Add Candidate</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="alternate_mobile">Alternate Mobile</string>
    <string name="designation">Designation</string>
    <string name="experience">Experience</string>
    <string name="choose_files">Choose Files</string>
    <string name="no_file_chosen">No file chosen</string>
    <string name="notice_period">Notice Period</string>
    <string name="current_salary">Current Salary</string>
    <string name="rupee_symbol">Rs.</string>
    <string name="expected_salary">Expected Salary</string>
    <string name="status">Status</string>
    <string name="recruiter">Recruiter</string>
    <string name="remark">Remark</string>
    <string name="submit">Submit</string>
    <string name="candidate_rounds">Candidate Rounds</string>
    <string name="round">Round</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="details">Details</string>
    <string name="document">Document</string>
    <string name="password">Password</string>
    <string name="cft">CFT</string>
    <string name="joining_date">Joining Date</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="father_name">Father\'s Name</string>
    <string name="father_occupation">Father\'s Profession</string>
    <string name="mother_name">Mother\'s Name</string>
    <string name="mother_occupation">Mother\'s Profession</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="temporary_address">Temporary Address</string>
    <string name="document_type">Document Type</string>
    <string name="document_title">Document Title</string>
    <string name="upload_file">Upload File</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="edit_password">Edit Profile</string>
    <string name="employee_code">Employee Code</string>
    <string name="next">Next</string>
    <string name="lets_go">Let\'s Go!</string>
    <string name="leave_details">Leave Details</string>
    <string name="employee">Employee:</string>
    <string name="leave_date">Leave Date:</string>
    <string name="status_column">Status:</string>
    <string name="notify_to">Notified To:</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="welcome_desc">Enter your Email &amp; Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="codeflies">Codeflies</string>
    <string name="leaves">Leaves</string>
    <string name="candidates">Candidates</string>
    <string name="holidays">Holidays</string>
    <string name="attendance">Attendance</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="title">Title</string>
    <string name="leave_type">Leave Type</string>
    <string name="leave_from">Leave From</string>
    <string name="leave_to">Leave To</string>
    <string name="leave_days">Leave days</string>
    <string name="notify_desc">Notify to (other than admin, hr_manager)</string>
    <string name="write_content">Write Your Content</string>
    <string name="add_attachment">Add Attachments</string>
    <string name="notification">Notifications</string>
    <string name="reporting_to">Reporting To:</string>
    <string name="add_comment">Add Comment</string>
    <string name="schedule_interview">Schedule Interview</string>
    <string name="interviewer">Interviewer</string>
    <string name="interview_date">Interview Date</string>
    <string name="select_date">Select Date...</string>
    <string name="update_status">Update Status</string>
    <string name="loading">Loading...</string>


</resources>