<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/two_top_rounded"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:layout_height="wrap_content">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <View
           android:layout_width="100dp"
           android:layout_height="3dp"
           android:layout_marginTop="10dp"
           android:background="@drawable/rect_bg_large"
           android:backgroundTint="@color/gray"
           android:layout_gravity="center"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="2dp"
           android:orientation="vertical"
           android:padding="15dp">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/roboto"
               android:text="@string/add_comment"
               android:gravity="center"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:textSize="20dp" />


           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="15dp"
               android:fontFamily="@font/ubuntu"
               android:text="@string/comment"
               android:textColor="@color/black_light"
               android:textSize="16dp" />

           <EditText
               android:id="@+id/comment"
               android:layout_width="match_parent"
               android:layout_height="100dp"
               android:layout_marginTop="5dp"
               android:background="@drawable/edit_bg"
               android:fontFamily="@font/ubuntu_medium"
               android:gravity="start"
               android:inputType="textMultiLine"
               android:justificationMode="inter_word"
               android:padding="10dp"
               android:paddingStart="10dp"
               android:textColor="@color/black"
               android:textColorHint="@color/gray_dark"
               android:textSize="15dp" />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:fontFamily="@font/ubuntu"
               android:text="@string/add_attachment"
               android:textColor="@color/black_light"
               android:textSize="15.5dp" />

           <LinearLayout
               android:id="@+id/chooseFiles"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
               android:background="@drawable/edit_bg"
               android:orientation="horizontal">

               <TextView
                   android:layout_width="0dp"
                   android:layout_height="40dp"
                   android:layout_weight="0.5"
                   android:background="@drawable/edit_bg"
                   android:backgroundTint="@color/pulse_color"
                   android:padding="10dp"
                   android:text="@string/choose_files"
                   android:textColor="@color/white" />

               <TextView
                   android:id="@+id/fileName"
                   android:layout_width="0dp"
                   android:layout_height="40dp"
                   android:layout_weight="1"
                   android:background="@color/transparent"
                   android:fontFamily="@font/ubuntu_medium"
                   android:gravity="center_vertical"
                   android:hint="@string/no_file_chosen"
                   android:paddingStart="10dp"
                   android:paddingEnd="10dp"
                   android:textColor="@color/black"
                   android:textColorHint="@color/gray_dark"
                   android:textSize="15dp" />

           </LinearLayout>



           <com.skydoves.elasticviews.ElasticButton
               android:id="@+id/submit"
               android:layout_width="match_parent"
               android:layout_height="45dp"
               android:layout_marginTop="30dp"
               android:background="@drawable/rect_bg_small"
               android:backgroundTint="@color/pulse_color"
               android:padding="10dp"
               android:text="@string/submit"
               android:textColor="@color/white"
               app:button_duration="200"
               app:button_scale="0.93" />

       </LinearLayout>
   </LinearLayout>

    <ProgressBar
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/progressBar"/>
</RelativeLayout>
