<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Candidate.AddCandidate.AddCandidateActivity">

    <com.skydoves.elasticviews.ElasticImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/pulse_color"
        android:padding="10dp"
        android:onClick="gotoBack"
        android:src="@drawable/back_image_tint"
        app:imageView_duration="200"
        app:imageView_scale="0.93" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/add_candidate"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/name"
                android:textColor="@color/black_light"
                android:textSize="15.5dp" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/name"
                android:inputType="textCapSentences"
                android:lines="2"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/email"
                android:textColor="@color/black_light"
                android:textSize="15.5dp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/email"
                android:inputType="textCapSentences"
                android:lines="2"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/mobile"
                android:textColor="@color/black_light"
                android:textSize="15.5dp" />

            <EditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/mobile"
                android:lines="1"
                android:maxLength="10"
                android:minLines="1"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark"
                android:textSize="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/alternate_mobile"
                android:textColor="@color/black_light"
                android:textSize="15.5dp" />

            <EditText
                android:id="@+id/edtAlternateMobile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:lines="1"
                android:maxLength="10"
                android:minLines="1"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/alternate_mobile"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/designation"
                android:textColor="@color/black_light"
                android:textSize="15.5dp" />

            <Spinner
                android:id="@+id/spnDesignation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                style="@style/SpinnerTheme"
                android:spinnerMode="dropdown"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/experience"
                android:textColor="@color/black_light"
                android:textSize="15.5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spnYear"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    style="@style/SpinnerTheme"
                    android:spinnerMode="dropdown" />




                <Spinner
                    android:id="@+id/spnMonth"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    style="@style/SpinnerTheme"
                    android:spinnerMode="dropdown" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/chooseFiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/edit_bg"
                    android:backgroundTint="@color/pulse_color"
                    android:padding="10dp"
                    android:text="@string/choose_files"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/filesCount"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:fontFamily="@font/ubuntu_medium"
                    android:gravity="center_vertical"
                    android:hint="@string/no_file_chosen"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="15dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/notice_period"
                android:textColor="@color/black_light"
                android:textSize="15.5dp" />

            <EditText
                android:id="@+id/edtNoticePeriod"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/notice_period"
                android:inputType="number"
                android:lines="2"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark"
                android:textSize="15dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/current_salary"
                android:textColor="@color/black_light"
                android:textSize="15.5dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/pulse_color"
                    android:backgroundTint="@color/pulse_color"
                    android:padding="10dp"
                    android:text="@string/rupee_symbol"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/edtCurrentSalary"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:background="@color/transparent"
                    android:fontFamily="@font/ubuntu_medium"
                    android:hint=""
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="15dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/expected_salary"
                android:textColor="@color/black_light"
                android:textSize="15.5dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/pulse_color"
                    android:backgroundTint="@color/pulse_color"
                    android:padding="10dp"
                    android:text="@string/rupee_symbol"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/edtExpectedSalary"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:fontFamily="@font/ubuntu_medium"
                    android:hint=""
                    android:inputType="number"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="15dp" />



            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/status"
                android:textColor="@color/black_light"
                android:textSize="15.5dp" />

            <Spinner
                android:id="@+id/spnStatus"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                style="@style/SpinnerTheme"
                android:spinnerMode="dropdown" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/recruiter"
                android:textColor="@color/black_light"
                android:textSize="15.5dp" />

            <Spinner
                android:id="@+id/spnRecruiter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                style="@style/SpinnerTheme"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/remark"
                android:textColor="@color/black_light"
                android:textSize="15.5dp" />

            <EditText
                android:id="@+id/remarkWriteYourContent"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/ubuntu_medium"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_dark"
                android:textSize="15dp" />



            <com.skydoves.elasticviews.ElasticButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/rect_bg_small"
                android:backgroundTint="@color/pulse_color"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:button_duration="200"
                app:button_scale="0.93" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>